# vault

./: .gitignore  Cargo.toml
src/: container.rs  fs.rs  lib.rs  main.rs
src/container/: crypto.rs  header.rs
src/container/crypto/: aead.rs  aes_xts.rs
src/fs/: storage.rs
