[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
bincode = "1.3.3"
clap = { version = "4.5.1", features = ["derive"] }
eyre = "0.6.12"
fuser = "0.14.0"
libc = "0.2.153"
memmap = "0.7.0"
packed_struct = "0.10.1"
rand = "0.8.5"
ring = { version = "0.17.8", features = ["std"] }
serde = "1.0.204"
tempfile = "3.10.1"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
hex-literal = "0.4.1"
